修正一个基础表单上展现的bug

--- a/src/routes/List/BasicList.less
+++ b/src/routes/List/BasicList.less
@@ -65,11 +65,11 @@
         line-height: 22px;
       }
     }
-    & > div:last-child {
-      position: relative;
-      top: -16px;
-      width: 188px;
-    }
+    // & > div:last-child {
+    //   position: relative;
+    //   top: -16px;
+    //   width: 188px;
+    // }
   }
   .extraContentSearch {
     margin-left: 16px;
